@@ -3,11 +3,15 @@ Version: 0.2.28
 Date: 2020-12-08
   Changes:
     - help on technologies improved
+    - Alignment in technology panels
+    - Correct data for inifinte technologies 
     - Array:Clone whithout predicate was missing
     - Array:Stringify introduced
     - Common.ClickTarget re-introduced (it is only almost like CommonKey)
     - Eventmanager: Research-state things
     - initiate multiple reseaches. 1st version
+  Refactor:
+    - better naming
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.27
 Date: 2020-12-07
